Changes in 0.61.12:
  * You can now search for troves by <trove>=<host>@ 
  * A bug when cooking groups with depCheck = True (introduced in 0.61.10) 
    has been fixed.
  * A new r.ByDefault policy controls how components are included in their
    enclosing packages; the default is True except for :test and :debuginfo
    components that default to False.

Changes in 0.61.11:
  * A bug that caused a database deadlock when removing entries from the
    changeset cache in the repository server has been fixed.
  * Added RegularExpressionList in conarycfg
  * Added lockTroves configuration option for autolock
  * Recurisvely included troves could be removed incorrectly when those
    troves were already present

Changes in 0.61.10:
  * The conary update command now takes a --sync parameter, documented in 
    'man conary'
  * Groups now allow you to create a reference to another cooked trove, 
    and use that reference to add troves that are contained in that trove.
    For example, if you want to create a group-python based on the troves in
    an already cooked group-dist, you add a reference to the group-dist in 
    group-python, and pass the group-dist reference in when you call
    addTroves.
  * Work has begun towards generalizing the concept of a trove source.  
    A class SimpleTroveSource has been added that, when subclassed and given
    access to the troves, will allow you to call findTroves to search that 
    source.  The same code is used in update code to unify updating from
    the repository and from changesets, and it is used to provide the search
    capabilities for the local database.
  * Conary now allows all files, not just regular files, to have
    dependencies.  This is necessary for user/group dependencies for
    non-regular files to work.  Packages built with 0.61.10 or later
    that have non-regular files with non-root user or group will not
    be readable by Conary versions 0.61.9 or earlier.